<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, CalculatorActivity!</string>
    <string name="app_name">Calculator</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiplication">✕</string>
    <string name="division">÷</string>
    <string name="equal">=</string>
    <string name="point">.</string>
    <string name="ac">AC</string>
    <string name="ce">CE</string>
    <string name="mc">MC</string>
    <string name="mr">MR</string>
    <string name="ms">MS</string>
    <string name="mPlus">M+</string>
    <string name="mMinus">M-</string>
    <string name="back">←</string>
    <string name="history">History</string>
    <string name="previous">Previous</string>
    <string name="delete">Delete</string>
    <string name="welcome">History of Calculations:</string>
    <string name="plusMinus">±</string>
    <string name="send_to">show . . .</string>

</resources>