<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:ems="10"
        android:inputType="text"
        android:text=""
        android:textSize="35dip" />

    <TableRow>

        <Button
            android:id="@+id/seven"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/seven"
            android:textSize="30dip" />

        <Button
            android:id="@+id/eight"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/eight"
            android:textSize="30dip" />

        <Button
            android:id="@+id/nine"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/nine"
            android:textSize="30dip" />

        <Button
            android:id="@+id/division"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/division"
            android:textSize="30dip" />

        <Button
            android:id="@+id/multiplication"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/multiplication"
            android:textSize="30dip" />
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/four"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/four"
            android:textSize="30dip" />

        <Button
            android:id="@+id/five"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/five"
            android:textSize="30dip" />

        <Button
            android:id="@+id/six"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/six"
            android:textSize="30dip" />

        <Button
            android:id="@+id/plus"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/plus"
            android:textSize="30dip" />

        <Button
            android:id="@+id/minus"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/minus"
            android:textSize="30dip" />
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/one"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/one"
            android:textSize="30dip" />

        <Button
            android:id="@+id/two"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/two"
            android:textSize="30dip" />

        <Button
            android:id="@+id/three"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/three"
            android:textSize="30dip" />

        <Button
            android:id="@+id/ce"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/ac"
            android:textSize="30dip" />

        <Button
            android:id="@+id/ac"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/ac"
            android:textSize="30dip" />
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/point"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight=".5"
            android:text="@string/point"
            android:textSize="30dip" />

        <Button
            android:id="@+id/zero"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight=".5"
            android:text="@string/zero"
            android:textSize="30dip" />

        <Button
            android:id="@+id/equal"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight=".5"
            android:text="@string/equal"
            android:textSize="30dip" />

        <Button
            android:id="@+id/back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_span="2"
            android:layout_weight="1"
            android:text="@string/back"
            android:textSize="30dip" />
    </TableRow>

</TableLayout>