<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/editTextLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/textViewPanel"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <EditText
                android:id="@+id/editText1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/DarkBrown1"
                android:clickable="true"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="right|center"
                android:inputType="text"
                android:textColor="@color/white"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:freezesText="true"
                android:textSize="25sp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:background="@color/DarkBrown1"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/historyRow"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/history"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/gray22"
                android:text="@string/history"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/memoryRow"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/mc"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/DarkBrown1"
                android:text="@string/mc"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/ms"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/DarkBrown1"
                android:text="@string/ms"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/mr"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/DarkBrown1"
                android:text="@string/mr"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/mPlus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/DarkBrown1"
                android:text="@string/mPlus"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/mMinus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/DarkBrown1"
                android:text="@string/mMinus"
                android:textColor="@color/white"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/firstRow"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/back"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/gray22"
                android:text="@string/back"
                android:textColor="@color/white"
                android:textSize="35sp" />

            <Button
                android:id="@+id/ce"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/gray22"
                android:text="@string/ce"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/ac"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/gray22"
                android:text="@string/ac"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/plusMinus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/gray22"
                android:text="@string/plusMinus"
                android:textColor="@color/white"
                android:textSize="35sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/secondRow"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/seven"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/DarkBrown1"
                android:text="@string/seven"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/eight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/DarkBrown1"
                android:text="@string/eight"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/nine"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/DarkBrown1"
                android:text="@string/nine"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/division"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/gray22"
                android:text="@string/division"
                android:textColor="@color/white"
                android:textSize="35sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/thirdRow"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/four"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/DarkBrown1"
                android:text="@string/four"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/five"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/DarkBrown1"
                android:text="@string/five"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/six"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/DarkBrown1"
                android:text="@string/six"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/multiplication"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/gray22"
                android:text="@string/multiplication"
                android:textColor="@color/white"
                android:textSize="35sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fourthRow"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/one"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/DarkBrown1"
                android:text="@string/one"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/DarkBrown1"
                android:text="@string/two"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/three"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/DarkBrown1"
                android:text="@string/three"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/minus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/gray22"
                android:text="@string/minus"
                android:textColor="@color/white"
                android:textSize="35sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fifthRow"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/point"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/gray22"
                android:text="@string/point"
                android:textColor="@color/white"
                android:textSize="35sp" />

            <Button
                android:id="@+id/zero"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/DarkBrown1"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/equal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/gray22"
                android:text="@string/equal"
                android:textColor="@color/white"
                android:textSize="35sp" />

            <Button
                android:id="@+id/plus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/gray22"
                android:text="@string/plus"
                android:textColor="@color/white"
                android:textSize="35sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>