<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="clip_vertical"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:inputType="none"
        android:textSize="50dip" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" >
    </LinearLayout>

    <Button
        android:id="@+id/division"
        android:layout_width="wrap_content"
        android:layout_height="76dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="14dp"
        android:text="@string/division"
        android:textSize="30dip" />

    <Button
        android:id="@+id/eight"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_alignParentLeft="true"
        android:text="@string/eight"
        android:textSize="30dip" />

    <Button
        android:id="@+id/nine"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_below="@+id/textView1"
        android:text="@string/nine"
        android:textSize="30dip" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="76dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editText1"
        android:text="@string/back"
        android:textSize="30dip" />

    <Button
        android:id="@+id/ce"
        android:layout_width="wrap_content"
        android:layout_height="76dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editText1"
        android:text="@string/ce"
        android:textSize="30dip" />

    <Button
        android:id="@+id/ac"
        android:layout_width="wrap_content"
        android:layout_height="76dp"
        android:layout_below="@+id/editText1"
        android:layout_toRightOf="@+id/nine"
        android:text="@string/ac"
        android:textSize="30dip" />

    <Button
        android:id="@+id/seven"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_below="@+id/back"
        android:layout_marginLeft="25dp"
        android:layout_toRightOf="@+id/ac"
        android:layout_weight="1"
        android:text="@string/seven"
        android:textSize="30dip" />

</RelativeLayout>