<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/DarkBrown1"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".2"
        android:freezesText="true"
        android:gravity="center"
        android:text="@string/welcome"
        android:textSize="25sp" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:layout_weight="4"
        android:scrollbars="vertical" >

        <TextView
            android:id="@+id/historyText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="25sp" />
    </ScrollView>

    <LinearLayout
        android:id="@+id/historyButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".8" >

        <Button
            android:id="@+id/previous"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/gray22"
            android:text="@string/previous"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/delete"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/gray22"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>